feat: add mesh node update
